--- a/core/pom.xml
+++ b/core/pom.xml
@@ -63,5 +63,11 @@
             <version>3.0.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
