--- a/war/pom.xml
+++ b/war/pom.xml
@@ -83,5 +83,11 @@
             <version>3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
