--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
         <smallrye-graphql.version>2.0.0</smallrye-graphql.version>
 
         <surefire.version>3.0.0-M7</surefire.version>
-        <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
     </properties>
 
     <dependencies>
@@ -66,7 +65,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>${maven-war-plugin.version}</version>
+                <version>3.3.2</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
             </plugin>
         </plugins>
     </build>
